--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,10 +1,13 @@
-name: Go
+name: Test and Deploy API to dev
 
 on:
   push:
     branches: [ '**' ]
   pull_request:
     branches: [ main ]
+    
+env:
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
 
@@ -25,4 +28,27 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -covermode=count -coverprofile=coverage.out ./...
+      
+    - name: gcov2lcov-action
+      uses: jandelgado/gcov2lcov-action@v1.0.9
+      
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+
+      
+  deploy:
+      name: Deploy app
+      needs: build-test
+      environment: 
+        name: dev
+        url: https://comp4050-square-api.fly.dev
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: ./api
+      steps:
+        - uses: actions/checkout@v2
+        - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: flyctl deploy --remote-only
+        
