--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,14 +11,13 @@ definitions:
     - step: &deploy
         name: Deploy
         deployment: Production
-        # trigger: manual
+        trigger: manual
         script:
           - curl -L https://fly.io/install.sh | FLYCTL_INSTALL=/usr/local sh
           - flyctl deploy --remote-only
 
 pipelines:
   default:
-    # - parallel:
-    #   - step: *build-test
-    #   - step: *deploy  
-    - step: *deploy  
+    - parallel:
+      - step: *build-test
+      - step: *deploy  
