--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,10 @@ processes = []
 [env]
   PORT = "8080"
 
+[mount]
+  source="myapp_data"
+  destination="/app/data"
+
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
