add classID and unitID to assignment resolver

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -75,6 +75,8 @@ models:
         resolver: true
       submissions:
         resolver: true
+      unitID:
+        resolver: true
   Submission:
     fields:
       result:
