--- a/renovate.json
+++ b/renovate.json
@@ -15,5 +15,8 @@
             "groupName": "all non-major dependencies",
             "groupSlug": "all-minor-patch"
         }
+    ],
+    "schedule": [
+        "before 3am on Monday"
     ]
 }
